RESOLVED FIXED18405
[GTK] Property setters do not call g_object_notify()
https://bugs.webkit.org/show_bug.cgi?id=18405
Summary [GTK] Property setters do not call g_object_notify()
Marco Barisione
Reported 2008-04-10 08:34:34 PDT
If a property is set using the _set_foobar() method then the notify::foobar method is not emitted. We should add a call to g_object_notify to every setter, if possible emitting the signal only if the new value is different from the old one.
Attachments
Add missing g_object_notify in WebKitWebView (1.15 KB, patch)
2008-06-15 07:13 PDT, Christian Dywan
no flags
Christian Dywan
Comment 1 2008-06-15 07:13:08 PDT
Created attachment 21711 [details] Add missing g_object_notify in WebKitWebView There are in fact three cases in WebKitWebView where g_object_notify is missing, this patch fixes them.
Christian Dywan
Comment 2 2008-06-15 07:42:19 PDT
Comment on attachment 21711 [details] Add missing g_object_notify in WebKitWebView Committed in revision 34571.
Note You need to log in before you can comment on or make changes to this bug.