[GTK] Property setters do not call g_object_notify()

https://bugs.webkit.org/show_bug.cgi?id=18405

Reviewed by Alp Toker.


git-svn-id: svn://svn.chromium.org/blink/trunk@34571 bbb929c8-8fbe-4397-9dbb-9b2b20218538